fix(styles): overflow handling on fenced code blocks

--- a/assets/css/article.scss
+++ b/assets/css/article.scss
@@ -7,6 +7,10 @@ article {
   overflow: auto;
   background: var(--contrastBackground);
 
+  code{
+    overflow-x: auto;
+  }
+
   p {
     width: 100%;
     word-break: break-word;
